# MedClaim

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  render.yaml
backend/agents/: __init__.py  appeal_drafting.py  code_audit.py  denial_prediction.py  eligibility.py  graph.py  llm.py  nodes.py  resolution_tracker.py  state.py  supervisor.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  claim.py  responses.py
backend/app/routers/: __init__.py  admin.py  agents.py  analytics.py  auth.py  claims.py  comments.py  feedback.py  public.py  voice.py  workflows.py
backend/app/services/: __init__.py  approval_service.py  audit_service.py  blog_service.py  claim_service.py  comment_service.py  eligibility_service.py  fhir_client.py  lead_service.py  pipeline_jobs.py  user_service.py  voice_service.py
backend/db/: __init__.py  client.py  seed.py
backend/db/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_pipeline_jobs.sql  003_realtime_and_triggers.sql  004_human_feedback.sql  005_auth_collaboration.sql
backend/llmops/: __init__.py  evaluate.py  logging.py  metrics.py  tracing.py
backend/prompts/: loader.py
backend/prompts/templates/: appeal_letter.j2  code_audit.j2  denial_prediction.j2
backend/rag/: __init__.py  embeddings.py  retrievers.py  setup.py
backend/tests/: __init__.py  conftest.py  test_appeal_drafting.py  test_claims.py  test_code_audit.py  test_denial_prediction.py  test_e2e_pipeline.py  test_eligibility.py  test_graph.py  test_health.py  test_voice.py
data/: eligibility_fixtures.yaml  generate_claims.py  payer_directory.yaml
data/ingestion/: __init__.py  download_sources.py  ingest_clinical_guidelines.py  ingest_coding_rules.py  ingest_payer_policies.py  run_all.py
docs/: 01-architecture.md  02-agents.md  03-rag.md  04-database.md  05-data-handling.md  06-agent-logic.md  07-llmops.md  08-api-routers.md  09-services.md  10-voice-ai.md  11-workflows-approval.md
frontend/: .gitkeep  package-lock.json  package.json  render.yaml  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/pages/: Analytics.jsx  ApiDocumentation.jsx  ClaimDetail.jsx  ClaimsList.jsx  DashboardHome.jsx  Landing.jsx  Login.jsx  UserManagement.jsx  VoiceQuery.jsx  WorkflowConfig.jsx
infra/: docker-compose.yml
infra/grafana/dashboards/: medclaim.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/grafana/provisioning/datasources/: prometheus.yml
infra/prometheus/: prometheus.yml
