# =============================================================================
# MedClaim — Project Configuration
# =============================================================================

[project]
name = "medclaim"
version = "0.1.0"
description = "Autonomous Insurance Claim Lifecycle Agent"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

# =============================================================================
# Ruff — Linter & Formatter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",  # raise-without-from-inside-except
    "N802",  # Function name `CORS_ORIGINS` should be lowercase
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MyPy — Static Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_equality = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# Pytest — Test Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require running services)",
    "rag: RAG quality tests",
    "llm: LLM output validation tests",
]

# =============================================================================
# Coverage — Test Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
